# realistic-adv-examples

./: .gitignore  LICENSE  README.md  ablations_improvements.ipynb  ablations_raw_numbers.csv  attack_cifar10.py  attack_hsja.py  create_arrays.sh  environment.yml  exp_directories.txt  fix_ba_results.py  generate_histogram.py  launch_experiment_slurm.sh  main.py  plot.py  plot_dist_vs_queries.py  plot_dit_vs_queries.py  plots.sh  pyproject.toml  requirements.txt  train_dogs_model.py
PAR/: patch_removal.py
RayS/: .gitignore  RayS.py  RayS_Single.py  attack_natural.py  attack_robust.py  dataset.py  edenai_model.py  environment.yml  general_tf_model.py  general_torch_model.py  generate_histogram.py  pyproject.toml  test_cloud_providers.ipynb
RayS/arch/: binary_resnet50.py  cifar_model.py  clip_laion_nsfw.py  edenai_model.py  fs_utils.py  madry_wrn.py  mnist_model.py  preact_resnet.py  wideresnet.py  wideresnet_compact.py  wideresnet_fs.py  wideresnet_he.py  wideresnet_interp.py  wideresnet_overfitting.py  wideresnet_rst.py
RayS/model_wrappers/: __init__.py  edenai_model.py  general_model.py  tf_model.py  torch_model.py
RayS/nsfw_filters_results/: amazon_suggestive_five_indices.npy  amazon_test.json  google.json  google_racy_five_indices.npy
nsfw_filters_results/: amazon_replay.json  api4ai.json  api4ai_nsfw_five_indices.npy  api4ai_test.json  google.json  google_test.json
scripts/: compute_nsfw_outputs.py  port_keras_model.py  train_dogs_model.py
src/: attack.py  attack_results.py  attacks.py  compute_nsfw_outputs.py  dataset.py  image_utils.py  imagenet_nsfw.py  json_list.py  setup.py  utils.py
src/arch/: binary_resnet50.py  clip_laion_nsfw.py  edenai_model.py  google_nsfw_model.py  resnet50_cifar10.py
src/attacks/: __init__.py  base.py  blended_noise.py  boundary_attack.py  geoda.py  hsja.py  opt.py  queries_counter.py  rays.py  sign_opt.py  utils.py
src/model_wrappers/: __init__.py  (+5 more)
tests/: test_attack.py  test_json_list.py
(+10 files in other folders)
