[tool.poetry]
name = "realistic-adv-examples"
version = "0.0.1"
description = ""
authors = ["Edoardo Debenedetti <edoardo.debenedetti@inf.ethz.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = { version = "^1.11.0", source="torch" }
torchvision = { version = "^0.12.0", source="torch" }

[tool.poetry.dev-dependencies]
yapf = { version = "^0.32.0", source = "pypi" }
mypy = { version = "^0.971", source = "pypi" }
flake8 = { version = "^5.0.4", source = "pypi" }

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu113"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"

[tool.isort]
profile = "google"
src_paths = ["src", "test"]

[tool.pylint]
max-line-length = 120

[tool.yapf]
based_on_style = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
